--
-- PostgreSQL database dump
--

\restrict oQtG87qWYGzra4oVeJRhBPSmx02bRRQTeIladKAkRsnorgzaS1OnPdeyobdYxvc

-- Dumped from database version 17.11
-- Dumped by pg_dump version 17.11

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET transaction_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: accounts_user; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.accounts_user (
    password character varying(128) NOT NULL,
    last_login timestamp with time zone,
    is_superuser boolean NOT NULL,
    id uuid NOT NULL,
    username character varying(150) NOT NULL,
    email character varying(254) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    is_active boolean NOT NULL,
    is_staff boolean NOT NULL
);


--
-- Name: attachments_attachment; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.attachments_attachment (
    id uuid NOT NULL,
    purpose character varying(16) NOT NULL,
    kind character varying(16) NOT NULL,
    original_name character varying(255) NOT NULL,
    file character varying(100) NOT NULL,
    content_type character varying(64) NOT NULL,
    size integer NOT NULL,
    width integer,
    height integer,
    claim_token_hash character varying(64) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    comment_id uuid,
    owner_id uuid,
    CONSTRAINT attachments_attachment_height_check CHECK ((height >= 0)),
    CONSTRAINT attachments_attachment_size_check CHECK ((size >= 0)),
    CONSTRAINT attachments_attachment_width_check CHECK ((width >= 0))
);


--
-- Name: comments_comment; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.comments_comment (
    id uuid NOT NULL,
    author_name character varying(150) NOT NULL,
    author_email character varying(254) NOT NULL,
    homepage character varying(200) NOT NULL,
    html_text text NOT NULL,
    search_text text NOT NULL,
    depth integer NOT NULL,
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone NOT NULL,
    parent_id uuid,
    root_id uuid,
    user_id uuid,
    score integer NOT NULL,
    CONSTRAINT comments_comment_depth_check CHECK ((depth >= 0)),
    CONSTRAINT root_comment_depth_zero CHECK (((parent_id IS NOT NULL) OR (depth = 0)))
);


--
-- Name: comments_commentvote; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.comments_commentvote (
    id bigint NOT NULL,
    identity character varying(100) NOT NULL,
    value smallint NOT NULL,
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone NOT NULL,
    comment_id uuid NOT NULL
);


--
-- Name: comments_commentvote_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.comments_commentvote ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.comments_commentvote_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: events_outboxevent; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.events_outboxevent (
    id uuid NOT NULL,
    event_type character varying(80) NOT NULL,
    aggregate_id uuid NOT NULL,
    payload jsonb NOT NULL,
    created_at timestamp with time zone NOT NULL,
    published_at timestamp with time zone,
    attempts integer NOT NULL,
    last_error text NOT NULL,
    CONSTRAINT events_outboxevent_attempts_check CHECK ((attempts >= 0))
);


--
-- Name: events_processedevent; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.events_processedevent (
    id bigint NOT NULL,
    event_id uuid NOT NULL,
    consumer_name character varying(80) NOT NULL,
    processed_at timestamp with time zone NOT NULL
);


--
-- Name: events_processedevent_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.events_processedevent ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.events_processedevent_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: accounts_user accounts_user_email_key; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.accounts_user
    ADD CONSTRAINT accounts_user_email_key UNIQUE (email);


--
-- Name: accounts_user accounts_user_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.accounts_user
    ADD CONSTRAINT accounts_user_pkey PRIMARY KEY (id);


--
-- Name: accounts_user accounts_user_username_key; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.accounts_user
    ADD CONSTRAINT accounts_user_username_key UNIQUE (username);


--
-- Name: attachments_attachment attachments_attachment_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.attachments_attachment
    ADD CONSTRAINT attachments_attachment_pkey PRIMARY KEY (id);


--
-- Name: comments_comment comments_comment_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_comment
    ADD CONSTRAINT comments_comment_pkey PRIMARY KEY (id);


--
-- Name: comments_commentvote comments_commentvote_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_commentvote
    ADD CONSTRAINT comments_commentvote_pkey PRIMARY KEY (id);


--
-- Name: events_outboxevent events_outboxevent_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.events_outboxevent
    ADD CONSTRAINT events_outboxevent_pkey PRIMARY KEY (id);


--
-- Name: events_processedevent events_processedevent_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.events_processedevent
    ADD CONSTRAINT events_processedevent_pkey PRIMARY KEY (id);


--
-- Name: events_processedevent unique_event_per_consumer; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.events_processedevent
    ADD CONSTRAINT unique_event_per_consumer UNIQUE (event_id, consumer_name);


--
-- Name: comments_commentvote unique_vote_per_identity; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_commentvote
    ADD CONSTRAINT unique_vote_per_identity UNIQUE (comment_id, identity);


--
-- Name: comments_commentvote comment_vote_value_valid; Type: CHECK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_commentvote
    ADD CONSTRAINT comment_vote_value_valid CHECK ((value = ANY (ARRAY['-1'::smallint, '1'::smallint])));


--
-- Name: accounts_user_email_b2644a56_like; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX accounts_user_email_b2644a56_like ON public.accounts_user USING btree (email varchar_pattern_ops);


--
-- Name: accounts_user_username_6088629e_like; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX accounts_user_username_6088629e_like ON public.accounts_user USING btree (username varchar_pattern_ops);


--
-- Name: attachments_attachment_comment_id_8d75c8d0; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX attachments_attachment_comment_id_8d75c8d0 ON public.attachments_attachment USING btree (comment_id);


--
-- Name: attachments_attachment_owner_id_720defb8; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX attachments_attachment_owner_id_720defb8 ON public.attachments_attachment USING btree (owner_id);


--
-- Name: attachments_comment_2975b7_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX attachments_comment_2975b7_idx ON public.attachments_attachment USING btree (comment_id, created_at);


--
-- Name: comment_root_date_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comment_root_date_idx ON public.comments_comment USING btree (created_at DESC, id DESC) WHERE (parent_id IS NULL);


--
-- Name: comment_root_email_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comment_root_email_idx ON public.comments_comment USING btree (author_email, id) WHERE (parent_id IS NULL);


--
-- Name: comment_root_name_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comment_root_name_idx ON public.comments_comment USING btree (author_name, id) WHERE (parent_id IS NULL);


--
-- Name: comments_co_parent__10bc81_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_co_parent__10bc81_idx ON public.comments_comment USING btree (parent_id, created_at);


--
-- Name: comments_co_root_id_45b474_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_co_root_id_45b474_idx ON public.comments_comment USING btree (root_id, created_at);


--
-- Name: comments_comment_parent_id_3e0802fb; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_comment_parent_id_3e0802fb ON public.comments_comment USING btree (parent_id);


--
-- Name: comments_comment_root_id_23b4c218; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_comment_root_id_23b4c218 ON public.comments_comment USING btree (root_id);


--
-- Name: comments_comment_user_id_a1db4881; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_comment_user_id_a1db4881 ON public.comments_comment USING btree (user_id);


--
-- Name: comments_commentvote_comment_id_d17088dc; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX comments_commentvote_comment_id_d17088dc ON public.comments_commentvote USING btree (comment_id);


--
-- Name: outbox_pending_created_idx; Type: INDEX; Schema: public; Owner: -
--

CREATE INDEX outbox_pending_created_idx ON public.events_outboxevent USING btree (published_at, created_at);


--
-- Name: attachments_attachment attachments_attachme_comment_id_8d75c8d0_fk_comments_; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.attachments_attachment
    ADD CONSTRAINT attachments_attachme_comment_id_8d75c8d0_fk_comments_ FOREIGN KEY (comment_id) REFERENCES public.comments_comment(id) DEFERRABLE INITIALLY DEFERRED;


--
-- Name: attachments_attachment attachments_attachment_owner_id_720defb8_fk_accounts_user_id; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.attachments_attachment
    ADD CONSTRAINT attachments_attachment_owner_id_720defb8_fk_accounts_user_id FOREIGN KEY (owner_id) REFERENCES public.accounts_user(id) DEFERRABLE INITIALLY DEFERRED;


--
-- Name: comments_comment comments_comment_parent_id_3e0802fb_fk_comments_comment_id; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_comment
    ADD CONSTRAINT comments_comment_parent_id_3e0802fb_fk_comments_comment_id FOREIGN KEY (parent_id) REFERENCES public.comments_comment(id) DEFERRABLE INITIALLY DEFERRED;


--
-- Name: comments_comment comments_comment_root_id_23b4c218_fk_comments_comment_id; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_comment
    ADD CONSTRAINT comments_comment_root_id_23b4c218_fk_comments_comment_id FOREIGN KEY (root_id) REFERENCES public.comments_comment(id) DEFERRABLE INITIALLY DEFERRED;


--
-- Name: comments_comment comments_comment_user_id_a1db4881_fk_accounts_user_id; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_comment
    ADD CONSTRAINT comments_comment_user_id_a1db4881_fk_accounts_user_id FOREIGN KEY (user_id) REFERENCES public.accounts_user(id) DEFERRABLE INITIALLY DEFERRED;


--
-- Name: comments_commentvote comments_commentvote_comment_id_d17088dc_fk_comments_comment_id; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.comments_commentvote
    ADD CONSTRAINT comments_commentvote_comment_id_d17088dc_fk_comments_comment_id FOREIGN KEY (comment_id) REFERENCES public.comments_comment(id) DEFERRABLE INITIALLY DEFERRED;


--
-- PostgreSQL database dump complete
--

\unrestrict oQtG87qWYGzra4oVeJRhBPSmx02bRRQTeIladKAkRsnorgzaS1OnPdeyobdYxvc
